--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,6 +6,9 @@
   "homepage": "",
   "license": "ISC",
   "main": "lib/index.js",
+  "bin": {
+    "s-cli": "bin/index.js"
+  },
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -18,5 +21,6 @@
   },
   "dependencies": {
     "@s-cli-dev/utils": "^1.0.1"
-  }
+  },
+  "gitHead": "33ff4eb02d4e9b48eeb014302ebd744c24bc8749"
 }
