--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@s-cli-dev/core",
-  "version": "1.0.2",
+  "version": "1.0.0",
   "description": "core",
   "author": "wujinshan <wujinshan@neware.com.cn>",
   "homepage": "",
@@ -13,6 +13,9 @@
     "lib": "lib",
     "test": "__tests__"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "files": [
     "lib"
   ],
@@ -22,5 +25,5 @@
   "dependencies": {
     "@s-cli-dev/utils": "^1.0.2"
   },
-  "gitHead": "33ff4eb02d4e9b48eeb014302ebd744c24bc8749"
+  "gitHead": "fd987b50484abbefe8c51f17b9084ecad0e2c054"
 }
