--- a/commands/init/package.json
+++ b/commands/init/package.json
@@ -25,5 +25,6 @@
   },
   "bugs": {
     "url": "https://github.com/201641402613/s-cli-dev/issues"
-  }
+  },
+  "gitHead": "e1fc670419a7874d27bed3fd7fdee0d82c4a958b"
 }
